Fixing 100vh on mobile devices.

--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -3,7 +3,8 @@ display: flex;
 flex-direction: column;
 flex-shrink: 0;
 justify-content: space-between;
-height: 100vh; 
+height: 100vh;
+height: 100svh; 
 position: sticky;
 top: 0;
 background-color: var(--light-white);
